5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4010/executions/1573_1333.log
== TEST (2019-03-12 12:32:10) 
-- CODE:
expressao = 30 – (3 ** 2) + 8 // 3 ** 2 * 10
print(expressao)
-- ERROR:
File "XXXX", line 1
    expressao = 30 – (3 ** 2) + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:32:57) 
-- CODE:
expressao = 30 – (3 ** 2) + (8 // (3 ** 2)* 10)
print(expressao)
-- ERROR:
File "XXXX", line 1
    expressao = 30 – (3 ** 2) + (8 // (3 ** 2)* 10)
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 12:33:00) 
-- CODE:
expressao = 30 – (3 ** 2) + (8 // (3 ** 2)* 10)
print(expressao)
-- EXECUTION TIME:
0.141434
-- ERROR:
  File "/home/codebench/codes/1573/1333/main.py", line 1
    expressao = 30 \u2013 (3 ** 2) + (8 // (3 ** 2)* 10)
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:33:50) 
-- CODE:
expressao = 30 – (3 ** 2) + (8 // ((3 ** 2)* 10))
print(expressao)
-- ERROR:
File "XXXX", line 1
    expressao = 30 – (3 ** 2) + (8 // ((3 ** 2)* 10))
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:37:47) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(expressao)
-- ERROR:
File "XXXX", line 1
    expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 12:37:48) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(expressao)
-- EXECUTION TIME:
0.128832
-- ERROR:
  File "/home/codebench/codes/1573/1333/main.py", line 1
    expressao = 30 \u2013 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:38:43) 
-- CODE:
expressao = 30 – (3 ** 2) + (8 // (3 ** 2) * 10)
print(expressao)
-- ERROR:
File "XXXX", line 1
    expressao = 30 – (3 ** 2) + (8 // (3 ** 2) * 10)
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 12:38:44) 
-- CODE:
expressao = 30 – (3 ** 2) + (8 // (3 ** 2) * 10)
print(expressao)
-- EXECUTION TIME:
0.198221
-- ERROR:
  File "/home/codebench/codes/1573/1333/main.py", line 1
    expressao = 30 \u2013 (3 ** 2) + (8 // (3 ** 2) * 10)
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:39:35) 
-- CODE:
expressao = 30 - 3 ** 2 + 8 // 3 ** 2 * 10
print(expressao)
-- OUTPUT:
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 12:39:36) 
-- CODE:
expressao = 30 - 3 ** 2 + 8 // 3 ** 2 * 10
print(expressao)
-- EXECUTION TIME:
0.190972
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
21
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
